Changing of images

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta name="author" content="Real Huster"/>
   <meta property="og:title" content="Main Title">
   <meta property="og:description" content="A legal entity organized and operated for a collective, public or social benefit">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon/site.webmanifest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,15 +75,16 @@
           </header>
           <div class="container-fluid">
             <div class="row">
-              <figure class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                <img src="assets/img/about_box.png" class="figure-img img-fluid w-100" alt="Donate Box">
-              </figure>
+              <video controls autoplay loop class="object-fit-cover col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                <source src="/assets/media/charity.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
               <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                 <h3 class="md-title">You can create a world where no people goes to behungry. Make a change the world now.</h3>
                 <p class="p-details">Lorem ipsum dolor sit amet, consecte tur adipisicing elit. Numquam quaerat atque, dolore amido ipsum dolor sit Lorem ipsum dolor sit amet, consecte tur adipisicing elit.</p>
                 <p class="p-details">Lorem ipsum dolor sit amet, consecte tur adipisicing elit. Numquam quaerat atque, dolore amido ipsum dolor sit Lorem ipsum dolor sit amet, consecte.</p>
                 <div class="d-flex align-items-center">
-                  <img src="assets/img/avatar.png" class="img-fluid " alt="Avatar user">
+                  <img src="assets/img/avatars/h-avatar.png" class="img-fluid " alt="Avatar user">
                   <h3 class="md-title ml-5">benjamin blanchard <span>founder of x-theme</span></h3>
                 </div>
               </div>
@@ -100,21 +101,21 @@
             <div class="container-fluid">
               <div class="row">
                 <figure class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-                  <img src="assets/img/donate.png" class="figure-img img-fluid w-100" alt="Donate Box">
+                  <img src="assets/img/home/h-causes.png" class="figure-img img-fluid w-100" alt="Donate Box">
                   <h3 class="md-title">donation form</h3>
                   <figcaption>Sed diam nonummy Lorem ipsum dolor sit amet, consectetuer adipiscing elit,</figcaption>
                   <button class="y-btn" type="button" name="donate-btn">donet now</button>
                 </figure>
 
                 <figure class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-                  <img src="assets/img/donate.png" class="figure-img img-fluid w-100" alt="Donate Box">
+                  <img src="assets/img/home/h-causes_1.png" class="figure-img img-fluid w-100" alt="Donate Box">
                   <h3 class="md-title">people help</h3>
                   <figcaption>Sed diam nonummy Lorem ipsum dolor sit amet, consectetuer adipiscing elit,</figcaption>
                   <button class="y-btn" type="button" name="donate-btn">donet now</button>
                 </figure>
               
                 <figure class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-                  <img src="assets/img/donate.png" class="figure-img img-fluid w-100" alt="Donate Box">
+                  <img src="assets/img/home/h-causes_2.png" class="figure-img img-fluid w-100" alt="Donate Box">
                   <h3 class="md-title">children education</h3>
                   <figcaption>Sed diam nonummy Lorem ipsum dolor sit amet, consectetuer adipiscing elit,</figcaption>
                 <button class="y-btn" type="button" name="donate-btn">donet now</button>
@@ -132,7 +133,7 @@
           <div class="container-fluid">
             <div class="row align-items-center">
               <figure class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                <img src="assets/img/event.png" class="figure-img img-fluid w-100" alt="Event Box">
+                <img src="assets/img/events/h-event.png" class="figure-img img-fluid w-100" alt="Event Box">
               </figure>
               <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                 <h3 class="md-title">insure clean water for africa.</h3>
@@ -143,7 +144,7 @@
             </div>
             <div class="row align-items-center flex-row-reverse text-end">
               <figure class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                <img src="assets/img/event.png" class="figure-img img-fluid w-100" alt="Event Box">
+                <img src="assets/img/events/h-event_1.png" class="figure-img img-fluid w-100" alt="Event Box">
               </figure>
               <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                 <h3 class="md-title">insure clean water for africa.</h3>
@@ -164,7 +165,7 @@
           <div class="container-fluid">
             <div class="row">
               <figure class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                <img src="assets/img/help.png" class="figure-img img-fluid w-100" alt="Help Box">
+                <img src="assets/img/home/h-help.png" class="figure-img img-fluid w-100" alt="Help Box">
               </figure>
               <section class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 d-flex flex-wrap align-items-center">
                 <div class="text-center w-50">
