--- a/events.html
+++ b/events.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimum-scale=1, maximum-scale=1" />
-    <title>Y-Charity</title>
-    <meta name="description" content="A legal entity organized and operated for a collective, public or social benefit">
-    <meta name="author" content="Real Hustler">
-    <meta name="copyright" content="all right reserved">
-    <meta name="robots" content="index, follow">
-    <meta name="keywords" content="Non-Profit, Organization, Volunteer, Help, Mission, Inspiration, Charity NGO" />
-    <meta name="author" content="Real Huster" />
-    <meta property="og:title" content="Main Title">
-    <meta property="og:description"
-        content="A legal entity organized and operated for a collective, public or social benefit">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/normalize.min.css" />
-    <link rel="stylesheet" href="assets/css/index.css" />
-    <script src="https://kit.fontawesome.com/ddbbaf4e09.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimum-scale=1, maximum-scale=1" />
+  <title>Y-Charity</title>
+  <meta name="description" content="A legal entity organized and operated for a collective, public or social benefit">
+  <meta name="author" content="Real Hustler">
+  <meta name="copyright" content="all right reserved">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="Non-Profit, Organization, Volunteer, Help, Mission, Inspiration, Charity NGO" />
+  <meta name="author" content="Real Huster" />
+  <meta property="og:title" content="Main Title">
+  <meta property="og:description" content="A legal entity organized and operated for a collective, public or social benefit">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicon/site.webmanifest">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/normalize.min.css" />
+  <link rel="stylesheet" href="assets/css/index.css" />
+  <script src="https://kit.fontawesome.com/ddbbaf4e09.js"></script>
 </head>
 
 <body>
@@ -42,33 +38,31 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="navbar-brand d-block" href="index.html"><img src="/assets/img/h-logo.png" alt="Logo"></a>
+              <a class="navbar-brand d-block" href="index.html"><img src="assets/img/h-logo.png" alt="Logo"></a>
               <ul class="navbar-nav ml-auto navbar-right mb-2 mb-lg-0">
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black active" aria-current="page"
-                          href="index.html">home</a>
+                      <a class="nav-link text-uppercase text-black" aria-current="page" href="index.html">home</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black" href="#">about</a>
+                      <a class="nav-link text-uppercase text-black disabled" href="#">about</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black" href="#">causes</a>
+                      <a class="nav-link text-uppercase text-black disabled" href="#">causes</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black"
-                          href="#">events</a>
+                      <a class="nav-link text-uppercase text-black" href="events.html">events</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black" href="#">news</a>
+                      <a class="nav-link text-uppercase text-black disabled" href="#">news</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black" href="#">shop</a>
+                      <a class="nav-link text-uppercase text-black disabled" href="#">shop</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black" href="#">pages</a>
+                      <a class="nav-link text-uppercase text-black disabled" href="#">pages</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-uppercase text-black" href="#">contact</a>
+                      <a class="nav-link text-uppercase text-black disabled" href="#">contact</a>
                   </li>
               </ul>
           </div>
@@ -79,14 +73,16 @@
 
   <!-- Main content -->
   <main class="main bg-body-tertiary">
+    <!-- Main content -->
+    <section class="intro">
+      <div class="position-relative">
+        <img src="assets/img/banners/e-banner.png" class="banner-evt" alt="Banner">
+        <h1 class="xxl-title text-uppercase text-center text-white position-absolute top-50 start-50 translate-middle m-0">events</h1>
+      </div>
+    </section>
     <!-- Next Event -->
     <section class="y-event my-5 py-5">
       <section class="wrapper">
-        <header>
-            <h2 class="xl-title">next event</h2>
-            <p class="p-details text-center mb-5">There are many variations of azer duskam of Lorem Ipsum
-                available.</p>
-        </header>
         <div class="container-fluid">
           <div class="row align-items-center my-5 p-4 border">
             <figure class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -148,14 +144,18 @@
         <nav aria-label="Page navigation example">
           <ul class="pagination justify-content-center">
             <li class="page-item">
-              <a class="page-link" href="#" aria-label="Previous">
+              <a class="page-link border-0 text-black bg-body-secondary m-1" href="#" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
               </a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item">
-              <a class="page-link" href="#" aria-label="Next">
+              <a class="page-link border-0 text-black bg-body-secondary m-1" href="#">1</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link border-0 text-black bg-body-secondary m-1" href="#">2</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link border-0 text-black bg-body-secondary m-1" href="#" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
               </a>
             </li>
@@ -172,18 +172,18 @@
               <div class="row justify-content-between position-relative">
                   <div class="position-absolute top-0 start-50 translate-middle bg-white small shadow">
                       <div class="d-flex justify-content-between align-items-center p-5">
-                          <img src="/assets/img/c-sponsor.png" class="img-fluid" alt="Sponsor">
-                          <img src="/assets/img/c-sponsor_1.png" class="img-fluid" alt="Sponsor">
-                          <img src="/assets/img/c-sponsor_2.png" class="img-fluid" alt="Sponsor">
-                          <img src="/assets/img/c-sponsor_3.png" class="img-fluid" alt="Sponsor">
-                          <img src="/assets/img/c-sponsor_4.png" class="img-fluid" alt="Sponsor">
+                        <div class="col-2"><img src="assets/img/c-sponsor.png" class="img-fluid" alt="Sponsor"></div>
+                        <div class="col-2"><img src="assets/img/c-sponsor_1.png" class="img-fluid" alt="Sponsor"></div>
+                        <div class="col-2"><img src="assets/img/c-sponsor_2.png" class="img-fluid" alt="Sponsor"></div>
+                        <div class="col-2"><img src="assets/img/c-sponsor_3.png" class="img-fluid" alt="Sponsor"></div>
+                        <div class="col-2"><img src="assets/img/c-sponsor_4.png" class="img-fluid" alt="Sponsor"></div>
                       </div>
                   </div>
               </div>
               <br><br><br><br><br><br><br><br>
               <div class="row">
                   <div class="col-12 col-sm-6 col-md-14 col-lg-4 col-xl-4 mt-5">
-                      <a href=""><img src="/assets/img/f-logo.png" alt="Footer Logo"></a>
+                      <a href=""><img src="assets/img/f-logo.png" alt="Footer Logo"></a>
                       <address>
                           Headquarters:
                           5533 NewCapitol Trail PMB# 989 Ubarni DE 77208
@@ -221,5 +221,4 @@
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/index.js"></script>
 </body>
-
 </html>
